--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
 	],
 	"devDependencies": {
 		"@types/jest": "^24.0.11",
-		"jest": "^24.3.1",
+		"jest": "^24.5.0",
 		"lerna": "^3.13.1",
 		"prettier": "^1.16.4",
 		"ts-jest": "^24.0.0",
 		"ts-node": "^8.0.3",
-		"tslint": "^5.13.1",
+		"tslint": "^5.14.0",
 		"tslint-config-prettier": "^1.18.0",
 		"tslint-plugin-prettier": "^2.0.1",
-		"typescript": "^3.3.3333"
+		"typescript": "^3.4.0-dev.20190316"
 	}
 }
