--- a/packages/@markuplint/ml-core/tsconfig.json
+++ b/packages/@markuplint/ml-core/tsconfig.json
@@ -17,5 +17,5 @@
 		}
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.test.ts"]
+	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
 }
