--- a/packages/markuplint/tsconfig.json
+++ b/packages/markuplint/tsconfig.json
@@ -26,5 +26,5 @@
 		}
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.test.ts"]
+	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
 }
