--- a/website/package.json
+++ b/website/package.json
@@ -13,13 +13,19 @@
 		"@types/react": "^16.8.8",
 		"@types/react-dom": "16.8.3",
 		"gatsby": "^2.2.6",
+		"gatsby-image": "^2.0.34",
 		"gatsby-plugin-react-helmet": "^3.0.10",
+		"gatsby-plugin-sharp": "^2.0.30",
 		"gatsby-plugin-typescript": "^2.0.11",
 		"gatsby-source-filesystem": "^2.0.27",
 		"gatsby-transformer-remark": "^2.3.8",
+		"gatsby-transformer-sharp": "^2.1.17",
+		"monaco-editor": "^0.16.2",
+		"normalize.css": "^8.0.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
 		"react-helmet": "^5.2.0",
+		"react-monaco-editor": "^0.25.1",
 		"styled-components": "^4.1.3"
 	},
 	"devDependencies": {
