--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,7 @@
 		"type-check": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@loadable/component": "^5.7.0",
 		"@types/node": "^11.11.5",
 		"@types/react": "^16.8.8",
 		"@types/react-dom": "16.8.3",
@@ -29,6 +30,7 @@
 		"styled-components": "^4.1.3"
 	},
 	"devDependencies": {
+		"@types/loadable__component": "^5.6.0",
 		"@types/react-helmet": "^5.0.8",
 		"@types/styled-components": "^4.1.12",
 		"monaco-editor-webpack-plugin": "^1.7.0"
