--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"dev": "lerna run --parallel dev & jest --watch",
 		"test": "jest --coverage",
 		"cli": "ts-node packages/markuplint/src/cli/index.ts",
-		"site:dev": "cd website; yarn dev",
-		"site:build": "cd website; yarn build"
+		"site:dev": "cd website; yarn site:dev",
+		"site:build": "cd website; yarn site:build"
 	},
 	"jest": {
 		"globals": {
