change title and description

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+	"name": "markuplint",
+	"description": "Linter for All Markup Languages.",
 	"private": true,
 	"scripts": {
 		"bootstrap": "lerna bootstrap",
