change module resolving

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -1,24 +1,18 @@
 {
-	"extends": "../tsconfig.json",
 	"compilerOptions": {
+		"module": "commonjs",
+		"target": "es5",
+		"strict": true,
+		"strictNullChecks": true,
+		"strictPropertyInitialization": true,
+		"allowSyntheticDefaultImports": true,
+		"experimentalDecorators": true,
+		"esModuleInterop": true,
+		"noImplicitAny": true,
+		"declaration": true,
+		"lib": ["dom", "es2015", "es2016", "es2017", "esnext"],
+		"baseUrl": ".",
 		"jsx": "react"
 	},
-	"references": [
-		{
-			"path": "../packages/@markuplint/ml-ast"
-		},
-		{
-			"path": "../packages/@markuplint/ml-config"
-		},
-		{
-			"path": "../packages/@markuplint/ml-core"
-		},
-		{
-			"path": "../packages/@markuplint/rules"
-		},
-		{
-			"path": "../packages/@markuplint/i18n"
-		}
-	],
 	"include": ["./src/**/*"]
 }
