--- a/website/package.json
+++ b/website/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@markuplint/website",
 	"description": "https://markuplint.dev",
-	"version": "1.0.0-alpha",
+	"version": "1.0.0-alpha.0",
 	"private": true,
 	"scripts": {
 		"site:dev": "gatsby develop",
@@ -9,11 +9,11 @@
 	},
 	"dependencies": {
 		"@loadable/component": "^5.7.0",
-		"@markuplint/html-parser": "^1.0.0-alpha.2",
-		"@markuplint/i18n": "^1.0.0-alpha.0",
-		"@markuplint/ml-config": "^1.0.0-alpha.0",
-		"@markuplint/ml-core": "^1.0.0-alpha.1",
-		"@markuplint/rules": "^1.0.0-alpha.1",
+		"@markuplint/html-parser": "^1.0.0-alpha.3",
+		"@markuplint/i18n": "^1.0.0-alpha.1",
+		"@markuplint/ml-config": "^1.0.0-alpha.1",
+		"@markuplint/ml-core": "^1.0.0-alpha.2",
+		"@markuplint/rules": "^1.0.0-alpha.2",
 		"gatsby": "^2.2.6",
 		"gatsby-image": "^2.0.34",
 		"gatsby-plugin-react-helmet": "^3.0.10",
@@ -32,11 +32,11 @@
 	},
 	"devDependencies": {
 		"@types/loadable__component": "^5.6.0",
-		"@types/react-helmet": "^5.0.8",
-		"@types/styled-components": "^4.1.12",
 		"@types/node": "^11.11.6",
 		"@types/react": "^16.8.8",
 		"@types/react-dom": "16.8.3",
+		"@types/react-helmet": "^5.0.8",
+		"@types/styled-components": "^4.1.12",
 		"monaco-editor-webpack-plugin": "^1.7.0"
 	}
 }
