--- a/packages/@markuplint/html-ls/tsconfig.json
+++ b/packages/@markuplint/html-ls/tsconfig.json
@@ -1,5 +1,10 @@
 {
 	"extends": "../../../tsconfig.json",
 	"compilerOptions": {},
+	"references": [
+		{
+			"path": "../ml-spec"
+		}
+	],
 	"exclude": ["node_modules", "./test/**/*.spec.ts"]
 }
