--- a/packages/@markuplint/ml-core/package.json
+++ b/packages/@markuplint/ml-core/package.json
@@ -19,6 +19,7 @@
 		"@markuplint/i18n": "^1.0.0-alpha.1",
 		"@markuplint/ml-ast": "^1.0.0-alpha.1",
 		"@markuplint/ml-config": "^1.0.0-alpha.1",
+		"@markuplint/ml-spec": "^1.0.0-alpha",
 		"css-selector-parser": "^1.3.0"
 	}
 }
