--- a/packages/@markuplint/rules/tsconfig.json
+++ b/packages/@markuplint/rules/tsconfig.json
@@ -11,16 +11,10 @@
 	},
 	"references": [
 		{
-			"path": "../file-resolver"
-		},
-		{
-			"path": "../ml-ast"
-		},
-		{
-			"path": "../ml-config"
-		},
-		{
 			"path": "../ml-core"
+		},
+		{
+			"path": "../ml-spec"
 		}
 	],
 	"include": ["./src/**/*"],
