--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 		"bootstrap": "lerna bootstrap",
 		"build": "lerna run build",
 		"clean": "lerna run clean",
-		"dev": "lerna run --parallel dev & jest --watch",
+		"dev": "lerna run --parallel dev",
 		"test": "jest --coverage",
 		"test:clear": "jest --clearCache",
 		"cli": "ts-node packages/markuplint/src/cli/index.ts",
