--- a/packages/@markuplint/html-ls/tsconfig.json
+++ b/packages/@markuplint/html-ls/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"extends": "../../../tsconfig.json",
-	"compilerOptions": {},
+	"compilerOptions": {
+		"composite": true
+	},
 	"references": [
 		{
 			"path": "../ml-spec"
