--- a/packages/@markuplint/html-ls/package.json
+++ b/packages/@markuplint/html-ls/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/html-ls",
-	"version": "1.0.0-alpha.2",
+	"version": "1.0.0-alpha.3",
 	"description": "A Ruleset of HTML Living Standard for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -23,6 +23,6 @@
 		"node-fetch": "^2.3.0"
 	},
 	"dependencies": {
-		"@markuplint/ml-spec": "^1.0.0-alpha"
+		"@markuplint/ml-spec": "^1.0.0-alpha.0"
 	}
 }
