--- a/packages/@markuplint/ml-spec/package.json
+++ b/packages/@markuplint/ml-spec/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/ml-spec",
-	"version": "1.0.0-alpha",
+	"version": "1.0.0-alpha.0",
 	"description": "Types and schema that specs of the Markup languages for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -19,6 +19,5 @@
 	},
 	"devDependencies": {
 		"typescript-json-schema": "^0.36.0"
-	},
-	"dependencies": {}
+	}
 }
