--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/rules",
-	"version": "1.0.0-alpha.3",
+	"version": "1.0.0-alpha.4",
 	"description": "Rules for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -17,10 +17,10 @@
 		"clean": "tsc --build --clean"
 	},
 	"dependencies": {
-		"@markuplint/ml-spec": "^1.0.0-alpha"
+		"@markuplint/ml-spec": "^1.0.0-alpha.0"
 	},
 	"devDependencies": {
-		"@markuplint/ml-core": "^1.0.0-alpha.3"
+		"@markuplint/ml-core": "^1.0.0-alpha.4"
 	},
 	"peerDependencies": {
 		"@markuplint/ml-core": "1.0.0-alpha"
