--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,10 @@ node_js:
 script:
     - yarn build
     - yarn test:coverage
+notifications:
+    webhooks:
+        urls:
+            - https://webhooks.gitter.im/e/fcfc239ffee1c8d5a04a
+        on_success: change
+        on_failure: always
+        on_start: never
