--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 		"test:coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
 		"test:clear": "jest --clearCache",
 		"lint": "eslint --fix ./packages/**/*.ts",
-		"cli": "ts-node packages/markuplint/src/cli/index.ts",
-		"cli:js": "node packages/markuplint/lib/cli/index.js",
+		"cli": "./packages/markuplint/bin/markuplint",
 		"site:dev": "cd website; yarn site:dev",
 		"site:build": "cd website; yarn site:build"
 	},
