Add publish script

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"all": "yarn lint; yarn clean; yarn build; yarn schema; yarn test:clear; yarn test;",
 		"cli": "./packages/markuplint/bin/markuplint",
 		"site:dev": "cd website; yarn site:dev",
-		"site:build": "cd website; yarn site:build"
+		"site:build": "cd website; yarn site:build",
+		"release": "lerna publish"
 	},
 	"jest": {
 		"globals": {
