--- a/website/package.json
+++ b/website/package.json
@@ -8,36 +8,36 @@
 		"site:build": "gatsby build"
 	},
 	"dependencies": {
-		"@loadable/component": "^5.10.2",
+		"@loadable/component": "^5.10.3",
 		"@markuplint/html-parser": "^1.0.0-alpha.9",
 		"@markuplint/i18n": "^1.0.0-alpha.5",
 		"@markuplint/ml-config": "^1.0.0-alpha.5",
 		"@markuplint/ml-core": "^1.0.0-alpha.9",
 		"@markuplint/rules": "^1.0.0-alpha.10",
-		"gatsby": "^2.15.2",
-		"gatsby-image": "^2.2.16",
+		"gatsby": "^2.15.28",
+		"gatsby-image": "^2.2.23",
 		"gatsby-plugin-favicon": "^3.1.6",
-		"gatsby-plugin-react-helmet": "^3.1.6",
-		"gatsby-plugin-sharp": "^2.2.19",
-		"gatsby-plugin-typescript": "^2.1.6",
-		"gatsby-source-filesystem": "^2.1.19",
-		"gatsby-transformer-remark": "^2.6.21",
-		"gatsby-transformer-sharp": "^2.2.13",
-		"monaco-editor": "^0.17.1",
+		"gatsby-plugin-react-helmet": "^3.1.10",
+		"gatsby-plugin-sharp": "2.2.27",
+		"gatsby-plugin-typescript": "^2.1.11",
+		"gatsby-source-filesystem": "^2.1.28",
+		"gatsby-transformer-remark": "^2.6.26",
+		"gatsby-transformer-sharp": "^2.2.19",
+		"monaco-editor": "^0.18.1",
 		"normalize.css": "^8.0.1",
-		"react": "^16.9.0",
-		"react-dom": "^16.9.0",
+		"react": "^16.10.1",
+		"react-dom": "^16.10.1",
 		"react-helmet": "^5.2.1",
-		"react-monaco-editor": "^0.30.1",
-		"styled-components": "^4.3.2"
+		"react-monaco-editor": "^0.31.0",
+		"styled-components": "^4.4.0"
 	},
 	"devDependencies": {
 		"@types/loadable__component": "^5.10.0",
-		"@types/node": "^12.7.3",
-		"@types/react": "^16.9.2",
-		"@types/react-dom": "16.9.0",
-		"@types/react-helmet": "^5.0.9",
-		"@types/styled-components": "^4.1.18",
+		"@types/node": "^12.7.8",
+		"@types/react": "^16.9.4",
+		"@types/react-dom": "16.9.1",
+		"@types/react-helmet": "^5.0.11",
+		"@types/styled-components": "^4.1.19",
 		"monaco-editor-webpack-plugin": "^1.7.0"
 	}
 }
