--- a/package.json
+++ b/package.json
@@ -48,21 +48,21 @@
 		"website"
 	],
 	"devDependencies": {
-		"@types/jest": "^24.0.18",
-		"@typescript-eslint/eslint-plugin": "^2.3.2",
-		"@typescript-eslint/parser": "^2.3.2",
-		"coveralls": "^3.0.6",
-		"eslint": "^6.5.1",
-		"eslint-config-prettier": "^6.3.0",
+		"@types/jest": "^24.0.22",
+		"@typescript-eslint/eslint-plugin": "^2.6.1",
+		"@typescript-eslint/parser": "^2.6.1",
+		"coveralls": "^3.0.7",
+		"eslint": "^6.6.0",
+		"eslint-config-prettier": "^6.5.0",
 		"eslint-plugin-eslint-comments": "^3.1.2",
-		"eslint-plugin-jsdoc": "^15.9.5",
+		"eslint-plugin-jsdoc": "^17.1.0",
 		"eslint-plugin-node": "^10.0.0",
 		"eslint-plugin-prettier": "^3.1.1",
 		"jest": "^24.9.0",
-		"lerna": "^3.16.4",
+		"lerna": "^3.18.3",
 		"prettier": "^1.18.2",
 		"ts-jest": "^24.1.0",
 		"ts-node": "^8.4.1",
-		"typescript": "3.6.3"
+		"typescript": "^3.7.2"
 	}
 }
