--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,6 @@
 {
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"eslint.enable": true,
-	"eslint.autoFixOnSave": true,
-	"eslint.validate": [
-		"javascript",
-		"javascriptreact",
-		{
-			"language": "typescript",
-			"autoFix": true
-		}
-	],
 	"json.schemas": [
 		{
 			"fileMatch": ["/packages/*markuplint/html-ls/src/permitted-structures/*.json"],
@@ -18,6 +9,12 @@
 		{
 			"fileMatch": ["/packages/*markuplint/html-ls/src/attributes/*.json"],
 			"url": "/packages/@markuplint/ml-spec/schemas/attributes.schema.json"
+		}
+	],
+	"editor.codeActionsOnSaveTimeout": 2000,
+	"eslint.workingDirectories": [
+		{
+			"mode": "auto"
 		}
 	],
 	"editor.codeActionsOnSave": {
