Update dev command

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"test:unit": "jest",
 		"lint": "eslint --fix ./packages/**/*.ts",
 		"schema": "lerna run schema",
-		"gen": "cd packages/\\@markuplint/html-ls/; yarn gen",
-		"all": "yarn lint; yarn clean; yarn build; yarn schema; yarn test:clear; yarn test;",
+		"gen": "cd packages/\\@markuplint/html-ls/; yarn gen; cd ../",
+		"all": "yarn lint; yarn clean; yarn gen; yarn build; yarn schema; yarn test:clear; yarn test;",
 		"cli": "./packages/markuplint/bin/markuplint",
 		"site:dev": "cd website; yarn site:dev",
 		"site:build": "cd website; yarn site:build",
