--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"test:coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
 		"test:clear": "jest --clearCache",
 		"test:unit": "jest",
+		"test:heapdump": "node --expose-gc ./heaptest/index.js",
 		"lint": "eslint --fix ./packages/**/*.ts",
 		"schema": "lerna run schema",
 		"gen": "cd packages/\\@markuplint/html-ls/; yarn gen; cd ../",
@@ -60,6 +61,7 @@
 		"eslint-plugin-jsdoc": "^20.0.0",
 		"eslint-plugin-node": "^11.0.0",
 		"eslint-plugin-prettier": "^3.1.2",
+		"heapdump": "^0.3.15",
 		"jest": "^24.9.0",
 		"lerna": "^3.20.2",
 		"prettier": "^1.19.1",
