Remove rule "async-attr-in-script"
Use rule "required-attr" instead.

--- a/test/fixture/.markuplintrc
+++ b/test/fixture/.markuplintrc
@@ -2,51 +2,24 @@
 	"$schema": "./markuplint.schema.json",
 	"extends": "@markuplint/html-ls",
 	"rules": {
-		"indentation": "tab",
-		"self-closing-tag": true,
-		"omitted-closing-tag": true,
-		"attr-value-quotes": true,
-		"case-sensitive-tag-name": true,
-		"case-sensitive-attr-name": true,
-		"attr-spasing": true,
-		"attr-equal-space-before": true,
-		"attr-equal-space-after": true,
-		"multiline-tag": true,
-		"multiline-attr": true,
-		"indentation-attr": true,
-		"void-element-closing": true,
-		"comment-spasing": true,
-		"path": true,
-		"data-attr-naming": true,
-		"event-attr": true,
-		"parse-error": true,
-		"character-reference": true,
-		"doctype": true,
-		"required-element": true,
-		"deprecated-element": true,
-		"permitted-contents": true,
-		"permitted-role": true,
 		"attr-duplication": true,
-		"required-attr": true,
+		"character-reference": true,
 		"deprecated-attr": true,
-		"deprecated-global-attr": true,
-		"deprecated-aria-attr": true,
+		"deprecated-element": true,
+		"doctype": true,
 		"id-duplication": true,
-		"comment": true,
-		"external-link": true,
-		"required-h1": true,
-		"heading-levels-skipping": true,
-		"heading-in-sectioning-content": true,
-		"heading-in-sectioning-root": true,
+		"permitted-contents": true,
+		"required-attr": true,
 		"landmark-roles": true,
-		"labels": true,
-		"empty-alt-attr": true,
-		"role-structure-tab": true,
-		"async-attr-in-script": true,
-		"class-naming": true,
-		"required-class-elements": true,
-		"custom-element-naming": true,
-		"textlint/textlint": false
+		"required-h1": true,
+		"class-naming": "/[a-z]+/",
+		"attr-equal-space-after": true,
+		"attr-equal-space-before": true,
+		"attr-spasing": true,
+		"attr-value-quotes": true,
+		"case-sensitive-attr-name": true,
+		"case-sensitive-tag-name": true,
+		"indentation": "tab"
 	},
 	"nodeRules": [
 		{
