--- a/heaptest/fixture/.markuplintrc
+++ b/heaptest/fixture/.markuplintrc
@@ -16,7 +16,6 @@
 		"attr-value-quotes": true,
 		"case-sensitive-attr-name": true,
 		"case-sensitive-tag-name": true,
-		"indentation": "tab",
-		"async-attr-in-script": false
+		"indentation": "tab"
 	}
 }
