Update prettier and ESLint

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
 	"useTabs": true,
 	"singleQuote": true,
 	"trailingComma": "all",
-	"bracketSpacing": true
+	"bracketSpacing": true,
+	"arrowParens": "avoid"
 }
