--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"test:clear": "jest --clearCache",
 		"test:unit": "jest",
 		"test:heapdump": "node --expose-gc ./heaptest/index.js",
-		"lint": "eslint --fix ./packages/**/*.ts",
+		"lint": "prettier --write './packages/**/*.ts'; eslint --fix './packages/**/*.ts'",
 		"schema": "lerna run schema",
 		"gen": "cd packages/\\@markuplint/html-ls/; yarn gen; cd ../",
 		"all": "yarn lint; yarn clean; yarn gen; yarn build; yarn schema; yarn test:clear; yarn test;",
@@ -51,23 +51,23 @@
 		"website"
 	],
 	"devDependencies": {
-		"@types/jest": "^25.1.4",
-		"@typescript-eslint/eslint-plugin": "^2.24.0",
-		"@typescript-eslint/parser": "^2.24.0",
-		"coveralls": "^3.0.9",
+		"@types/jest": "^25.2.1",
+		"@typescript-eslint/eslint-plugin": "^2.29.0",
+		"@typescript-eslint/parser": "^2.29.0",
+		"coveralls": "^3.0.13",
 		"eslint": "^6.8.0",
-		"eslint-config-prettier": "^6.10.0",
+		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-eslint-comments": "^3.1.2",
-		"eslint-plugin-jsdoc": "^22.1.0",
-		"eslint-plugin-node": "^11.0.0",
-		"eslint-plugin-prettier": "^3.1.2",
+		"eslint-plugin-jsdoc": "^24.0.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.1.3",
 		"heapdump": "^0.3.15",
-		"jest": "^25.1.0",
+		"jest": "^25.4.0",
 		"lerna": "^3.20.2",
-		"prettier": "^1.19.1",
-		"ts-jest": "^25.2.1",
-		"ts-node": "^8.7.0",
-		"typedoc": "^0.17.1",
+		"prettier": "^2.0.5",
+		"ts-jest": "^25.4.0",
+		"ts-node": "^8.9.0",
+		"typedoc": "^0.17.4",
 		"typescript": "^3.8.3"
 	}
 }
