--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
 		"project": "./tsconfig.json"
 	},
 	"rules": {
-		"indent": [2, "tab", { "SwitchCase": 1 }],
+		"indent": 0,
 		"quotes": [2, "single", "avoid-escape"],
 
 		"no-var": 2,
