--- a/packages/@markuplint/rules/package.json
+++ b/packages/@markuplint/rules/package.json
@@ -18,9 +18,11 @@
 	},
 	"dependencies": {
 		"@markuplint/html-ls": "^1.0.0-alpha.20",
-		"@markuplint/ml-spec": "^1.0.0-alpha.7"
+		"@markuplint/ml-spec": "^1.0.0-alpha.7",
+		"validator": "^13.0.0"
 	},
 	"devDependencies": {
+		"@types/validator": "^13.0.0",
 		"@markuplint/ml-core": "^1.0.0-alpha.21"
 	}
 }
