--- a/test/fixture/vue/.markuplintrc
+++ b/test/fixture/vue/.markuplintrc
@@ -6,14 +6,16 @@
 	"rules": {
 		"attr-duplication": true,
 		"character-reference": true,
+		"deprecated-attr": true,
 		"deprecated-element": true,
 		"doctype": true,
 		"id-duplication": true,
-		"parse-error": true,
 		"permitted-contents": true,
 		"required-attr": true,
+		"invalid-attr": true,
+		"landmark-roles": true,
 		"required-h1": true,
-		"class-naming": false,
+		"class-naming": "/[a-z]+/",
 		"attr-equal-space-after": true,
 		"attr-equal-space-before": true,
 		"attr-spasing": true,
