Updated modules and fixed by linter

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,12 @@
 {
-	"extends": ["eslint:recommended", "prettier", "prettier/@typescript-eslint"],
+	"extends": ["eslint:recommended"],
 	"env": {
 		"browser": false,
 		"es6": true,
 		"node": true,
 		"jest": true
 	},
-	"plugins": ["@typescript-eslint", "jsdoc", "eslint-comments", "prettier"],
+	"plugins": ["@typescript-eslint", "jsdoc", "eslint-comments"],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"sourceType": "module",
@@ -15,19 +15,16 @@
 	"rules": {
 		"indent": 0,
 		"quotes": [2, "single", "avoid-escape"],
-
 		"no-var": 2,
 		"prefer-const": 2,
-
 		"no-dupe-class-members": 0,
 		"no-unused-vars": 0,
 		"no-array-constructor": 0,
-
 		"sort-imports": [2],
+		"no-console": [1],
+		"no-mixed-spaces-and-tabs": 0,
 
 		"node/no-unsupported-features/es-syntax": 0,
-
-		"no-console": [1],
 
 		"@typescript-eslint/no-unused-vars": [2, { "args": "none" }],
 		"@typescript-eslint/no-array-constructor": 2,
