--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"transform": {
 			"^.+\\.tsx?$": "ts-jest"
 		},
-		"testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
+		"testRegex": "(\\.|/)(test|spec)\\.tsx?$",
 		"moduleFileExtensions": [
 			"ts",
 			"tsx",
@@ -51,23 +51,21 @@
 		"website"
 	],
 	"devDependencies": {
-		"@types/jest": "^25.2.3",
-		"@typescript-eslint/eslint-plugin": "^3.1.0",
-		"@typescript-eslint/parser": "^3.1.0",
+		"@types/jest": "^26.0.3",
+		"@typescript-eslint/eslint-plugin": "^3.5.0",
+		"@typescript-eslint/parser": "^3.5.0",
 		"coveralls": "^3.1.0",
-		"eslint": "^7.2.0",
-		"eslint-config-prettier": "^6.11.0",
+		"eslint": "^7.3.1",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-jsdoc": "^27.0.4",
+		"eslint-plugin-jsdoc": "^28.5.1",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "^3.1.3",
 		"heapdump": "^0.3.15",
-		"jest": "^26.0.1",
-		"lerna": "^3.22.0",
+		"jest": "^26.1.0",
+		"lerna": "^3.22.1",
 		"prettier": "^2.0.5",
-		"ts-jest": "^26.1.0",
+		"ts-jest": "^26.1.1",
 		"ts-node": "^8.10.2",
-		"typedoc": "^0.17.7",
+		"typedoc": "^0.17.8",
 		"typescript": "^3.9.5"
 	}
 }
