Fixed to detect class names

--- a/test/fixture/pug/.markuplintrc
+++ b/test/fixture/pug/.markuplintrc
@@ -14,7 +14,7 @@
 		"invalid-attr": true,
 		"landmark-roles": true,
 		"required-h1": true,
-		"class-naming": "/[a-z]+/",
+		"class-naming": "/^[a-z]+$/",
 		"attr-equal-space-after": true,
 		"attr-equal-space-before": true,
 		"attr-spasing": true,
