--- a/packages/@markuplint/html-parser/package.json
+++ b/packages/@markuplint/html-parser/package.json
@@ -17,12 +17,10 @@
 		"clean": "tsc --build --clean"
 	},
 	"devDependencies": {
-		"@types/parse5": "^5.0.3",
-		"@types/uuid": "^8.0.0"
+		"@types/parse5": "^5.0.3"
 	},
 	"dependencies": {
 		"@markuplint/ml-ast": "^1.0.0-alpha.11",
-		"parse5": "^6.0.0",
-		"uuid": "^8.1.0"
+		"parse5": "^6.0.0"
 	}
 }
