--- a/packages/@markuplint/vue-parser/package.json
+++ b/packages/@markuplint/vue-parser/package.json
@@ -15,13 +15,10 @@
 		"build": "tsc",
 		"clean": "tsc --build --clean"
 	},
-	"devDependencies": {
-		"@types/uuid": "^8.0.0"
-	},
+	"devDependencies": {},
 	"dependencies": {
 		"@markuplint/html-parser": "^1.0.0-alpha.20",
 		"@markuplint/ml-ast": "^1.0.0-alpha.11",
-		"uuid": "^8.1.0",
 		"vue-eslint-parser": "^7.1.0"
 	}
 }
