--- a/packages/@markuplint/rules/tsconfig.json
+++ b/packages/@markuplint/rules/tsconfig.json
@@ -11,13 +11,16 @@
 	},
 	"references": [
 		{
-			"path": "../html-spec"
-		},
-		{
 			"path": "../ml-core"
 		},
 		{
 			"path": "../ml-spec"
+		},
+		{
+			"path": "../pug-parser"
+		},
+		{
+			"path": "../vue-parser"
 		}
 	],
 	"include": ["./src/**/*"],
