--- a/test/fixture/vue/.markuplintrc
+++ b/test/fixture/vue/.markuplintrc
@@ -2,6 +2,9 @@
 	"parser": {
 		".vue$": "@markuplint/vue-parser"
 	},
+	"specs": [
+		"@markuplint/vue-spec"
+	],
 	"rules": {
 		"attr-duplication": true,
 		"character-reference": true,
