--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,27 +1,31 @@
-name: Node CI
+name: Test
 
 on:
     push:
         branches:
+            - master
             - next
+            - dev
     pull_request:
         branches:
+            - master
             - next
+            - dev
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+    test:
+        runs-on: [ubuntu-latest, macos-latest]
 
         strategy:
             matrix:
-                node-version: [12.x]
+                node: [12]
 
         steps:
             - uses: actions/checkout@v1
-            - name: Use Node.js ${{ matrix.node-version }}
+            - name: Use Node.js ${{ matrix.node }}
               uses: actions/setup-node@v1
               with:
-                  node-version: ${{ matrix.node-version }}
+                  node-version: ${{ matrix.node }}
             - name: npm install, build, and test
               run: |
                   yarn install
