--- a/packages/@markuplint/ml-spec/tsconfig.json
+++ b/packages/@markuplint/ml-spec/tsconfig.json
@@ -6,5 +6,5 @@
 		"rootDir": "./src"
 	},
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
+	"exclude": ["node_modules", "lib"]
 }
