--- a/packages/@markuplint/pug-parser/tsconfig.json
+++ b/packages/@markuplint/pug-parser/tsconfig.json
@@ -14,5 +14,5 @@
 		}
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
+	"exclude": ["node_modules", "lib"]
 }
