--- a/packages/@markuplint/rule-textlint/tsconfig.json
+++ b/packages/@markuplint/rule-textlint/tsconfig.json
@@ -15,5 +15,5 @@
 		}
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
+	"exclude": ["node_modules", "lib"]
 }
