--- a/packages/@markuplint/vue-spec/tsconfig.json
+++ b/packages/@markuplint/vue-spec/tsconfig.json
@@ -11,5 +11,5 @@
 		}
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "./test/**/*.spec.ts"]
+	"exclude": ["node_modules", "lib"]
 }
