--- a/packages/markuplint/package.json
+++ b/packages/markuplint/package.json
@@ -23,14 +23,9 @@
 		"@types/meow": "^5.0.0"
 	},
 	"dependencies": {
-		"@markuplint/file-resolver": "^1.0.0-alpha.18",
-		"@markuplint/html-parser": "^1.0.0-alpha.21",
-		"@markuplint/html-spec": "^1.0.0-alpha.24",
-		"@markuplint/i18n": "^1.0.0-alpha.9",
-		"@markuplint/ml-ast": "^1.0.0-alpha.12",
 		"@markuplint/ml-config": "^1.0.0-alpha.9",
 		"@markuplint/ml-core": "^1.0.0-alpha.28",
-		"@markuplint/ml-spec": "^1.0.0-alpha.9",
+		"@markuplint/ml-service": "^1.0.0-alpha.51",
 		"@markuplint/rules": "^1.0.0-alpha.40",
 		"cli-color": "^2.0.0",
 		"eastasianwidth": "^0.2.0",
