--- a/packages/markuplint/tsconfig.json
+++ b/packages/markuplint/tsconfig.json
@@ -7,10 +7,7 @@
 	},
 	"references": [
 		{
-			"path": "../@markuplint/file-resolver"
-		},
-		{
-			"path": "../@markuplint/ml-ast"
+			"path": "../@markuplint/ml-service"
 		},
 		{
 			"path": "../@markuplint/ml-config"
@@ -19,18 +16,9 @@
 			"path": "../@markuplint/ml-core"
 		},
 		{
-			"path": "../@markuplint/ml-spec"
-		},
-		{
 			"path": "../@markuplint/rules"
-		},
-		{
-			"path": "../@markuplint/i18n"
-		},
-		{
-			"path": "../@markuplint/html-spec"
 		}
 	],
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "lib", "./src/**/*.spec.ts"]
+	"exclude": ["node_modules", "lib"]
 }
