--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"sourceType": "module",
-		"project": "./tsconfig.json"
+		"project": ["./tsconfig.json", "./tsconfig.test.json"]
 	},
 	"rules": {
 		"indent": 0,
