--- a/website/package.json
+++ b/website/package.json
@@ -10,10 +10,11 @@
 	"author": "Yusuke Hirao",
 	"license": "MIT",
 	"devDependencies": {
-		"babel-loader": "^8.0.6",
-		"webpack": "^4.41.2",
-		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.9.0"
+		"babel-loader": "^8.1.0",
+		"ts-loader": "^8.0.1",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.12",
+		"webpack-dev-server": "^3.11.0"
 	},
 	"dependencies": {
 		"@markuplint/html-parser": "^1.0.0-alpha.21",
